# tidal-workshop

./: #advanced.tidal#  #burbage.tidal#  #demo-1.0.tidal#  #musichackspace2.tidal#  #qanda.tidal#  #sonada.tidal#  #summerschool.md#  #summerschool.tidal#  #vis.tidal#  #visinit.tidal#  #workshop.tidal#  .#advanced.tidal  .#burbage.tidal  .#demo-1.0.tidal  .#musichackspace2.tidal  .#qanda.tidal  .#sonada.tidal  .#summerschool.md  .#summerschool.tidal  .#vis.tidal  .#workshop.tidal  academy.tidal  advanced.tidal  barnet.tidal  burbage.tidal  demo-1.0.tidal  musichackspace.tidal  musichackspace2.tidal  osaka.tidal  qanda.tidal  sonada.tidal  summerschool.md  summerschool.tidal  test.tidal  tokyo.tidal  vis.tidal  visinit.tidal  workshop.tidal
advanced/: #japan.md#  #japan.tidal#  .#japan.md  japan.md  japan.tidal
berlin/: #workshop.tidal#  .#workshop.tidal  workshop.tidal  workshop.tidal~
crofton/: #01.md#  .#01.md  .01.md.swp  .compile.sh.swp  01.md  compile.sh  init-karlsruhe.tidal  karlsruhe.tidal  runpattern.hs
images/: slice.html
japan/: #advanced.md#  .#tmp.md  advanced.md  chords-arpeggios.tidal  tmp.md
karlsruhe/: .#01.md  01.md  init-karlsruhe.tidal  karlsruhe.tidal
light/: #init.tidal#  init.tidal
light/hs/: tidal.cabal
light/hs/Sound/Tidal/: Light.hs
limerick/: #01.md#  .#01.md  .#workshop.tidal  .compile.sh.swp  01.md  compile.sh  limerick.tidal  render.hs  runpattern.hs  workshop.tidal
limerick/templates/: template.latex
osc/: #osc.tidal#  .#osc.tidal  osc.tidal
s2hs2/: s2hs2.tidal
s2hs2tidalcycles08/: s2hs2tidalcycles08.pde
(+1 files in other folders)
