name:                tidal-light
version:             0.0.1
synopsis:            Experimental dmx control for tidal
-- description:
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>
Stability:           Experimental
Copyright:           (c) Alex McLean, 2017
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

Description: Experimental dmx control for tidal

library
  default-language:    Haskell2010

  Exposed-modules:     Sound.Tidal.Light

  Build-depends:
      base < 5
    , tidal
    , serialport
    , hosc
    , colour

